WS_INTEGRATION/mdapi_output_dir/objects/Configuration__mdt.object
<CustomObject>
    <label>Configuration</label>
    <pluralLabel>Configurations</pluralLabel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>